fix(core): set text-align on host notification

--- a/projects/core/components/notification/notification.style.less
+++ b/projects/core/components/notification/notification.style.less
@@ -11,6 +11,7 @@
     background: var(--tui-base-01);
     box-sizing: border-box;
     overflow: hidden;
+    text-align: left;
 
     .t-more {
         display: none;
@@ -110,6 +111,6 @@
     flex: 1;
     word-break: break-word;
     color: var(--tui-text-01);
-    text-align: left;
+    text-align: inherit;
     align-self: center;
 }
